# bacardi-prov-model

./: .gitignore  CITATION.cff  LICENSE.md  README.md  pyproject.toml
bacardi_prov_model/: __init__.py  task.py  utils.py
bacardi_prov_model/examples/: __init__.py  multiple_task_bundle.py  simple_task_bundle.py  task_bundle.py
docs/: task.md
example-output/multiple_task_bundle/: multiple_task_bundle.json  multiple_task_bundle.provn  multiple_task_bundle.ttl  multiple_task_bundle.xml
example-output/simple_task_bundle/: simple_task_bundle.json  simple_task_bundle.provn  simple_task_bundle.ttl  simple_task_bundle.xml
example-output/task_bundle/: task_bundle.json  task_bundle.provn  task_bundle.ttl  task_bundle.xml  task_bundle.xml.license
