# SPDX-FileCopyrightText: 2023 German Aerospace Center (DLR)
#
# SPDX-License-Identifier: CC0-1.0

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bacardi-prov-model"
description = "A reference implementation for the BACARDI PROV data model."
requires-python = ">=3.8"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [{ name = "Martin Stoffers", email = "martin.stoffers@dlr.de" }]
maintainers = [
    { name = "Andreas Schreiber", email = "andreas.schreiber@dlr.de" },
]
dependencies = [
    "prov>=2.0.0",
    "pydot"
]
keywords = [
    "prov",
    "provenance",
    "prov generation",
    "w3c prov",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dynamic = ["version"]

[project.scripts]
task-bundle = "bacardi_prov_model.examples.task_bundle:main"
simple-task-bundle = "bacardi_prov_model.examples.simple_task_bundle:main"
multi-task-bundle = "bacardi_prov_model.examples.multiple_task_bundle:main"

[project.urls]
Twitter = "https://twitter.com/dlr_software"
"Source Code" = "https://github.com/dlr-sc/bacardi-prov-model"
"Issue Tracker" = "https://github.com/dlr-sc/bacardi-prov-model/issues"

[tool.setuptools.dynamic]
version = { attr = "bacardi_prov_model.__version__" }

[tool.setuptools.packages.find]
exclude = ["example-output"]
